--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
         <junit.version>3.8.1</junit.version>
         <springframework.version>4.1.6.RELEASE</springframework.version>
         <commonsLogging.version>1.2</commonsLogging.version>
+
+        <!--tian 原先版本下不了，切了个版本-->
+        <dubboVersion>2.5.3</dubboVersion>
+        <zookeeperVersion>3.3.3</zookeeperVersion>
+        <!--tian-->
     </properties>
     <!-- **************************** /Properties 配置 **************************** -->
 
@@ -22,20 +27,20 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
-            <version>2.6.1</version>
+            <version>${dubboVersion}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.0.5.RELEASE</version>
+            <version>${springframework.version}</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
             <artifactId>zookeeper</artifactId>
-            <version>3.4.10</version>
+            <version>${zookeeperVersion}</version>
         </dependency>
 
         <dependency>
@@ -114,6 +119,12 @@
         <artifactId>aspectjweaver</artifactId>
         <version>1.8.5</version>
     </dependency>
+
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${springframework.version}</version>
+    </dependency>
     <!-- **************************** /Spring 依赖 **************************** -->
 
     <!-- **************************** Dubbo 依赖 **************************** -->
@@ -165,12 +176,17 @@
         <version>1.0-SNAPSHOT</version>
     </dependency>
         <!-- **************************** /interface 依赖 **************************** -->
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.5</version>
+    </dependency>
 
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+    </dependency>
 
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-        </dependency>
     </dependencies>
 </project>
