--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,8 +8,8 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             classpath:spring-consumer.xml,
-            classpath:spring-hibernate.xml,
-            classpath:spring.xml
+            classpath:spring.xml,
+            /WEB-INF/spring-servlet.xml
         </param-value>
     </context-param>
 
