--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.yuyuyzl.SSS</groupId>
-    <artifactId>webapp</artifactId>
+    <groupId>com.sss.consumer</groupId>
+    <artifactId>sss-consumer</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
@@ -180,7 +180,7 @@
 
     <!-- **************************** interface 依赖 **************************** -->
     <dependency>
-        <groupId>com.yuyuyzl.SSS</groupId>
+        <groupId>com.sss.interfaces</groupId>
         <artifactId>sss-interfaces</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
