--- a/pom.xml
+++ b/pom.xml
@@ -225,5 +225,20 @@
         <version>${mysqlVersion}</version>
     </dependency>
         <!-- **************************** hibernate 依赖 **************************** -->
+    <!--文件上传-->
+    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+    <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>1.3.1</version>
+    </dependency>
+    <!--文件下载依赖 -->
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.5</version>
+    </dependency>
+
     </dependencies>
 </project>
