转移jsp 增加统一管理services的类

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,5 +28,9 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener
         </listener-class>
     </listener>
+    <listener>
+        <listener-class>com.sss.consumer.ServiceInitHelper</listener-class>
+    </listener>
+
 
 </web-app>
