--- a/pom.xml
+++ b/pom.xml
@@ -240,5 +240,10 @@
         <version>2.5</version>
     </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
     </dependencies>
 </project>
