--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,14 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.6</version>
         </dependency>
-    <!-- **************************** Spring 依赖 **************************** -->
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
+        <!-- **************************** Spring 依赖 **************************** -->
     <!-- 添加Spring-core包 -->
     <dependency>
         <groupId>org.springframework</groupId>
