欢迎界面设置为home并且改变了homejsp

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -32,5 +32,7 @@
         <listener-class>com.sss.consumer.ServiceInitHelper</listener-class>
     </listener>
 
-
+    <welcome-file-list>
+        <welcome-file>/WEB-INF/jsp/home.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
